--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 h1 {
   font-family: 'Anton', sans-serif;
 }
+p {
+  font-family: 'Inter', sans-serif;
+}
 
 body {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
