--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,4 @@
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
